--- a/codes/day-1/ts-app/index.html
+++ b/codes/day-1/ts-app/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TypeScript App</title>
-    <script src="./dist/types.js"></script>
-    <script src="./dist/utility.js"></script>
-    <script src="./dist/index.js"></script>
+    <script src="./node_modules/requirejs/require.js" data-main="./dist/index.js"></script>
 </head>
 
 <body>
