index code and HTML design uploaded

--- a/codes/day-1/calculator-app/index.html
+++ b/codes/day-1/calculator-app/index.html
@@ -22,7 +22,7 @@
                 <input type="text" id="txtSecond">
             </div>
             <div>
-                <input type="button" value="Calculate">
+                <input type="button" value="Calculate" onclick="calculate()">
             </div>
             <div>
                 <label for="txtResult">Result: &nbsp;</label>
